Finished the footer section of the main page.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -109,6 +109,47 @@
       </div>
     </main>
 
+    <!-- Footer Section -->
+    <footer class="main-footer">
+      <div class="main-content">
+        <!-- Left Footer -->
+        <div class="footer-section footer-left">
+          <a
+            href="https://github.com/AthanasiosDavaris"
+            target="_blank"
+            class="footer-link"
+          >
+            <i class="fab fa-github"></i> &copy; Athanasios Davaris
+            [2022202200150]
+          </a>
+          <a
+            href="https://github.com/JohnSp8008"
+            target="_blank"
+            class="footer-link"
+          >
+            <i class="fab fa-github"></i> &copy; Ioannis Spanoudakis
+            [2022202200198]
+          </a>
+          <a
+            href="assets/report.pdf"
+            download="trash_project_report.pdf"
+            class="footer-link"
+            ><i class="fas fa-download"></i> Download Report</a
+          >
+        </div>
+
+        <!-- Center Section -->
+        <div class="footer-section footer-center">
+          <p class="catchphrase">This will be a catchphrase in the future.</p>
+        </div>
+
+        <!-- Right Section -->
+        <div class="footer-section footer-right">
+          <a href="terms.html" class="footer-link">Terms of Service</a>
+        </div>
+      </div>
+    </footer>
+
     <!-- Link to Common JS file -->
     <script src="js/common.js"></script>
     <!-- Link to Index JS file -->
