Debugged Image Button Bug no1

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -109,6 +109,13 @@
       </div>
     </main>
 
+    <div id="image-modal" class="modal-overlay">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <img src="img/set_image.jpg" alt="Our Lord and Saviour" />
+      </div>
+    </div>
+
     <!-- Footer Section -->
     <footer class="main-footer">
       <div class="main-content">
