--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,7 +118,7 @@
 
     <!-- Footer Section -->
     <footer class="main-footer">
-      <div class="main-content">
+      <div class="footer-content">
         <!-- Left Footer -->
         <div class="footer-section footer-left">
           <a
