--- a/frontend/search.html
+++ b/frontend/search.html
@@ -148,6 +148,16 @@
       </div>
     </main>
 
+    <div id="details-modal" class="modal-overlay">
+      <div class="modal-content details-modal-content">
+        <span class="close-button details-close-button">&times;</span>
+        <h2 id="details-modal-title">Post Details</h2>
+        <div id="details-modal-body">
+          <!-- Post details will be injected here by JavaScript -->
+        </div>
+      </div>
+    </div>
+
     <!-- Image Modal -->
     <div id="image-modal" class="modal-overlay">
       <div class="modal-content">
