Fixed bugs (typos) in search.html/search.js

--- a/frontend/search.html
+++ b/frontend/search.html
@@ -101,57 +101,10 @@
 
     <!-- Main Search Results Content -->
     <main>
-      <div class="Results-list">
-        <!-- Currently Static / Later will be dynamically generated -->
+      <div id="results-list">
+        <!-- Static content will be replaced by JavaScript -->
         <article class="search-result">
-          <p class="result-meta">
-            <span class="result-score" title="Relevance Score">15.78</span>
-            <span class="result-type">video</span>
-            <span class="result-date">2016-10-25</span>
-          </p>
-          <h2 class="result-title">Making America Great Again!</h2>
-          <p class="result-snippet">
-            ...some text from the post where we are making America great again.
-            The fake news media doesn't want you to see this but we are winning,
-            <strong>MAGA</strong> is stronger than ever before...
-          </p>
-          <div class="result-actions">
-            <button class="action-button find-similar-button">
-              <i class="fas fa-search-plus"></i> Find Similar
-            </button>
-            <button class="action-button view-details-button">
-              <i class="fas fa-eye"></i> View Details
-            </button>
-            <button class="action-button delete-button">
-              <i class="fas fa-trash"></i> Delete
-            </button>
-          </div>
-        </article>
-
-        <article class="search-result">
-          <p class="result-meta">
-            <span class="result-score" title="Relevance Score">12.41</span>
-            <span class="result-type">link</span>
-            <span class="result-date">2016-10-24</span>
-          </p>
-          <h2 class="result-title">Great rally in Ohio!</h2>
-          <p class="result-snippet">
-            ...a great rally today in Ohio! We love our patriots. Together we
-            will <strong>Make America Great Again</strong>! #<strong
-              >MAGA</strong
-            >
-          </p>
-          <div class="result-actions">
-            <button class="action-button find-similar-button">
-              <i class="fas fa-search-plus"></i> Find Similar
-            </button>
-            <button class="action-button view-details-button">
-              <i class="fas fa-eye"></i> View Details
-            </button>
-            <button class="action-button delete-button">
-              <i class="fas fa-trash"></i> Delete
-            </button>
-          </div>
+          <p>This is static content that should be replaced.</p>
         </article>
       </div>
     </main>
