--- a/frontend/index.html
+++ b/frontend/index.html
@@ -147,7 +147,9 @@
 
         <!-- Center Section -->
         <div class="footer-section footer-center">
-          <p class="catchphrase">This will be a catchphrase in the future.</p>
+          <p class="catchphrase">
+            This website is not associated in any way with the Epstein List.
+          </p>
         </div>
 
         <!-- Right Section -->
