--- a/frontend/index.html
+++ b/frontend/index.html
@@ -111,7 +111,7 @@
 
     <div id="image-modal" class="modal-overlay">
       <div class="modal-content">
-        <span class="close-button">&times;</span>
+        <span class="close-button image-close-button">&times;</span>
         <img src="img/set_image.jpg" alt="Our Lord and Saviour" />
       </div>
     </div>
