Frontend Clean-up

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -177,5 +177,8 @@
     <script src="js/common.js"></script>
     <!-- Link to Index JS file -->
     <script src="js/index.js"></script>
+
+    <!-- NEW: Toast Notification Container -->
+    <div id="toast-container"></div>
   </body>
 </html>
