--- a/frontend/search.html
+++ b/frontend/search.html
@@ -130,5 +130,8 @@
     <!-- JS files -->
     <script src="js/common.js"></script>
     <script src="js/search.js"></script>
+
+    <!-- NEW: Toast Notification Container -->
+    <div id="toast-container"></div>
   </body>
 </html>
