Hopefully final changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,11 +122,11 @@
         <!-- Left Footer -->
         <div class="footer-section footer-left">
           <a
-            href="https://github.com/AthanasiosDavaris"
+            href="https://athanasiosdavaris.github.io/CV/"
             target="_blank"
             class="footer-link"
           >
-            <i class="fab fa-github"></i> &copy; Athanasios Davaris
+            <i class="fas fa-tree"></i> &copy; Athanasios Davaris
             [2022202200150]
           </a>
           <a
