Finished the terms of service

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,6 +116,13 @@
       </div>
     </div>
 
+    <div id="terms-modal" class="modal-overlay">
+      <div class="modal-content">
+        <span class="close-button terms-close-button">&times;</span>
+        <img src="img/terms-service.jpg" alt="REDACTED" />
+      </div>
+    </div>
+
     <!-- Footer Section -->
     <footer class="main-footer">
       <div class="footer-content">
@@ -154,7 +161,9 @@
 
         <!-- Right Section -->
         <div class="footer-section footer-right">
-          <a href="terms.html" class="footer-link">Terms of Service</a>
+          <button id="terms-button" class="footer-link">
+            Terms of Service
+          </button>
         </div>
       </div>
 
